Started to style

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,18 @@ html {
   text-align: center;
   font-family: helvetica;
 }
+
+h1 {
+  font-size: 70px;
+
+}
+
+
+#home {
+  background-image: url('../images/the-flatiron-building.png');
+  background-size: cover;
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto;
+
+}
