--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,9 +5,9 @@ html {
 
 h1 {
   font-size: 70px;
-
+  font-weight: bold;
+  color: white;
 }
-
 
 #home {
   background-image: url('../images/the-flatiron-building.png');
@@ -15,5 +15,45 @@ h1 {
   background-position: center;
   margin-left: auto;
   margin-right: auto;
+}
 
+nav a {
+  font-size: 18px;
+  color: white;
+}
+
+#process {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+#designedinNY {
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  background-image: url('../images/the-flatiron-building.png');
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#copyright p {
+  display: inline;
+
+}
+
+#copyright,
+#copyright a {
+  text-align: left;
+  background-color: dimgray;
+  color: white;
 }
